--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,7 @@ section.price-area p {
 
 .price-basic, .price-unlimited {
     box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.15);
-    padding: 50px 0;
+    padding: 50px 20px;
     border-radius: 20px;
     border-top: 5px solid transparent;
     transition: 0.3s;
@@ -1520,6 +1520,10 @@ section.footer-copy {
         width: 100%;
     }
 
+    .second-headline img {
+        width: 320px;
+    }
+
     .box-second-area-right img {
         width: 250px;
     }
@@ -1555,6 +1559,12 @@ section.footer-copy {
 
     .price-area-info {
         flex-direction: column;
+    }
+}
+
+@media (max-width: 410px) {
+    .prices-area {
+        grid-template-columns: 1fr;
     }
 }
 
@@ -1657,6 +1667,10 @@ section.footer-copy {
 }
 
 @media (max-width: 600px) {
+    .second-headline img {
+        width: 320px;
+    }
+
     .content-inside-footer {
         flex-direction: column;
         justify-content: center;
@@ -1719,7 +1733,7 @@ section.footer-copy {
 @media (max-width: 730px){
     .prices-area {
         row-gap:20px;
-        grid-template-columns: 400px;
+        grid-template-columns: 1fr;
         margin:5% auto;
     }
 
